Final update of version 2

--- a/themes/package.json
+++ b/themes/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "stylelint \"**/*.scss\"",
-    "watch": "sass klno20test/scss/style.scss klno20/css/style.css --no-source-map",
-    "style": "sass klno20test/scss/style.scss klno20test/css/style.css --no-source-map",
-    "style-min": "sass klno20test/scss/style.scss klno20test/css/style.min.css --no-source-map --style compressed"
+    "watch": "sass klno20test/scss/style.scss klno20/css/style.css --no-source-map --watch",
+    "watch-min": "sass klno20test/scss/style.scss klno20/css/style.min.css --no-source-map --watch",
+    "style": "sass klno20-2/scss/style.scss klno20-2/css/style.css --no-source-map",
+    "style-min": "sass klno20-2/scss/style.scss klno20-2/css/style.min.css --no-source-map --style compressed --watch"
   },
   "keywords": [],
   "author": "",
