First release of kmom04

--- a/themes/package.json
+++ b/themes/package.json
@@ -8,8 +8,12 @@
     "lint": "stylelint \"**/*.scss\"",
     "watch": "sass klno20test/scss/style.scss klno20/css/style.css --no-source-map --watch",
     "watch-min": "sass klno20test/scss/style.scss klno20/css/style.min.css --no-source-map --watch",
-    "style": "sass klno20-2/scss/style.scss klno20-2/css/style.css --no-source-map",
-    "style-min": "sass klno20-2/scss/style.scss klno20-2/css/style.min.css --no-source-map --style compressed --watch"
+    "style": "npm run style-light && npm run style-dark",
+    "style-min": "npm run style-light-min && npm run style-dark-min",
+    "style-light": "sass klno20-2/scss/style.scss klno20-2/css/style.css --no-source-map",
+    "style-light-min": "sass klno20-2/scss/style.scss klno20-2/css/style.min.css --no-source-map --style compressed --watch",
+    "style-dark": "sass klno20-2/scss/style-dark.scss klno20-2/css/style-dark.css --no-source-map",
+    "style-dark-min": "sass klno20-2/scss/style-dark.scss klno20-2/css/style-dark.min.css --no-source-map --style compressed --watch"
   },
   "keywords": [],
   "author": "",
